--- a/product/templates/product_list.html
+++ b/product/templates/product_list.html
@@ -45,7 +45,7 @@
                         <li>
                             {#上一页 #}
                             {% if page_of_products.has_previous %}
-                                <a href="{{ page_of_products.previous_page_number }}" aria-label="Previous">
+                                <a href="?{{ page_of_products.previous_page_number }}" aria-label="Previous">
                                     <span aria-hidden="true">&laquo;</span>
                                 </a>
                             {% else %}
@@ -54,20 +54,20 @@
                         </li>
                             {# 全部页码 #}
                             {% for page_num in page_range %}
-                                {% if page_num == page_of_products.number  %}
-                                     <li class="active"><a href="?page={{ page_num }}"> {{ page_num }}</a></li>
+                            {% if page_num == page_of_blogs.number %}
+                                <li class="active"><span>{{ page_num }}</span></li>
+                            {% else %}
+                                {% if page_num == '...' %}
+                                    <li><span>{{ page_num }}</span></li>
                                 {% else %}
-                                    {% if page_num == '...' %}
-                                        <li> {{ page_num }}</li>
-                                    {% else %}
-                                        <li><a href="?page={{ page_num }}"> {{ page_num }}</a></li>
-                                    {% endif %}
+                                    <li><a href="?page={{ page_num }}">{{ page_num }}</a></li>
                                 {% endif %}
-                            {% endfor %}
+                            {% endif %}
+                        {% endfor %}
 
                         <li>
                             {% if page_of_products.has_next %}
-                                <a href="{{ page_of_products.next_page_number }}" aria-label="Next">
+                                <a href="?{{ page_of_products.next_page_number }}" aria-label="Next">
                                     <span aria-hidden="true">&raquo;</span>
                                 </a>
                             {% else %}
@@ -88,22 +88,32 @@
                         <ul class="product-types" style="list-style: none;">
                             {% for category in products_category %}
                                 <div class="blog_category">
-                                    <li>
-                                        <a href="{% url 'Category' category.pk %}"><h3>{{ category.Name }}</h3></a>
-                                    </li>
+                                    <div>
+                                        <a href="{% url 'Category' category.pk %}"><h3>{{ category.Name }}({{ category.blog_count}})</h3></a>
+                                    </div>
                                 </div>
                             <div class="blog_category">
-                                {% empty %}
-                                    <li>暂无分类</li>
+                            {% empty %}
+                                <li>暂无分类</li>
                             </div>
                             {% endfor %}
-
                         </ul>
-
                     </div>
-
                 </div>
-
+                <div class="panel panel-default">
+                        <div class="panel-heading">发表日期</div>
+                        <div class="panel-body">
+                            <ul>
+                                {% for blog_date ,blog_count in blog_dates.items %}
+                                    <div class="blog_date">
+                                        <a href="{% url 'product_date' blog_date.year blog_date.month blog_date.day %}">
+                                            <h3>{{ blog_date|date:"Y年m月d日 " }}({{ blog_count }})</h3>
+                                        </a>
+                                    </div>
+                                {% endfor %}
+                            </ul>
+                        </div>
+                    </div>
             </div>
         </div>
     </div>
